--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
     "react": "^19.2.0",
